--- a/package.json
+++ b/package.json
@@ -2,13 +2,28 @@
   "name": "coffeeshop_backend_redone",
   "version": "1.0.0",
   "description": "Recreating my coffeeshop backend project",
-  "main": "index.js",
+  "main": "dist/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prebuild": "tsc --build --clean",
+    "build": "tsc",
+    "prestart": "npm run build",
+    "start": "node dist/server.js",
+    "dev": "ts-node-dev src/server.ts",
+    "test": "tap --test-ignore=^.*\\.ts$"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^18.0.1",
+    "@types/tap": "^15.0.7",
+    "@typescript-eslint/eslint-plugin": "^5.30.4",
+    "@typescript-eslint/parser": "^5.30.4",
+    "eslint": "^8.19.0",
+    "tap": "^16.3.0",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "fastify": "^4.2.0"
   }
 }
