--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -12,6 +12,7 @@ jobs:
       - run: echo "The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo " The workflow is now ready to test your code on the runner."
       - name: Run tests
+        run: npm ci
         run: npm run build
         run: npm test
       - run: echo "This job's status is ${{ job.status }}."
