--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -6,7 +6,7 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
-         - uses: actions/setup-node@v3
+        uses: actions/setup-node@v3
         with:
           node-version: '16'
       - run: echo "The ${{ github.repository }} repository has been cloned to the runner."
