--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,9 @@
     "plugins": [
         "@typescript-eslint"
     ],
+    "ignorePatterns":[
+        "dist/**/*.js"
+    ],
     "rules": {
     }
 }
