--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -16,10 +16,10 @@ jobs:
       - name: Installing Dependencies
         run: npm ci
 
-      - name: Compiling project
+      - name: Building project
         run: npm run build
 
-      - name: Run tests
+      - name: Running tests
         run: npm test
 
       - run: echo "This job's status is ${{ job.status }}."
