--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@typescript-eslint/eslint-plugin": "^5.30.4",
     "@typescript-eslint/parser": "^5.30.4",
     "eslint": "^8.19.0",
+    "pino-pretty": "^8.1.0",
     "prisma": "^4.0.0",
     "tap": "^16.3.0",
     "ts-node-dev": "^2.0.0",
