--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -43,6 +43,9 @@ jobs:
       - name: Installing Dependencies
         run: npm ci
 
+      - name: Run migrations
+        run: npx prisma dev --name testing
+
       - name: Compiling project
         run: npm run build
 
