--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -7,22 +7,22 @@ jobs:
     container: node:16
 
     env:
-      DATABASE_URL: postgres://postgres_user:postgres_password@postgres:5432/postgres_db
 
     services:
       postgres:
         image: postgres:latest
         env:
           # optional (defaults to `postgres`)
-          POSTGRES_DB: postgres_db
+          #POSTGRES_DB: postgres_db
           # required
-          POSTGRES_PASSWORD: postgres_password
           # optional (defaults to `5432`)
-          POSTGRES_PORT: 5432
+          # POSTGRES_PORT: 5432
           # optional (defaults to `postgres`)
-          POSTGRES_USER: postgres_user
+          # POSTGRES_USER: postgres_user
+          DATABASE_URL: postgres://postgres:postgres_password@postgres:5432/postgres
+
+          POSTGRES_PASSWORD: postgres_password
         ports:
-          # maps tcp port 5432 on service container to the host
           - 5432:5432
         # set health checks to wait until postgres has started
         options: >-
