--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -6,6 +6,9 @@ jobs:
 
     container: node:16
 
+    env:
+      DATABASE_URL: postgres://postgres:postgres_password@postgres:5432/postgres
+
     services:
       postgres:
         image: postgres:latest
@@ -17,8 +20,6 @@ jobs:
           # POSTGRES_PORT: 5432
           # optional (defaults to `postgres`)
           # POSTGRES_USER: postgres_user
-          DATABASE_URL: postgres://postgres:postgres_password@postgres:5432/postgres
-
           POSTGRES_PASSWORD: postgres_password
         ports:
           - 5432:5432
