--- a/package.json
+++ b/package.json
@@ -15,23 +15,23 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/node": "^18.0.1",
-    "@types/tap": "^15.0.7",
-    "@typescript-eslint/eslint-plugin": "^5.30.4",
-    "@typescript-eslint/parser": "^5.30.4",
-    "eslint": "^8.19.0",
-    "pino-pretty": "^8.1.0",
-    "prisma": "^4.0.0",
-    "tap": "^16.3.0",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^4.7.4"
+    "@types/bcrypt": "5.0.0",
+    "@types/node": "18.0.1",
+    "@types/tap": "15.0.7",
+    "@typescript-eslint/eslint-plugin": "5.30.4",
+    "@typescript-eslint/parser": "5.30.4",
+    "eslint": "8.19.0",
+    "pino-pretty": "8.1.0",
+    "prisma": "4.0.0",
+    "tap": "16.3.0",
+    "ts-node-dev": "2.0.0",
+    "typescript": "4.7.4"
   },
   "dependencies": {
-    "@fastify/type-provider-typebox": "^2.0.1",
-    "@prisma/client": "^4.0.0",
-    "@sinclair/typebox": "^0.24.10",
-    "bcrypt": "^5.0.1",
-    "fastify": "^4.2.0"
+    "@fastify/type-provider-typebox": "2.0.1",
+    "@prisma/client": "4.0.0",
+    "@sinclair/typebox": "0.24.10",
+    "bcrypt": "5.0.1",
+    "fastify": "4.2.0"
   }
 }
