--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "typescript": "4.7.4"
   },
   "dependencies": {
+    "@fastify/jwt": "^6.2.1",
     "@fastify/type-provider-typebox": "2.0.1",
     "@prisma/client": "4.0.0",
     "@sinclair/typebox": "0.24.10",
